# stage-00

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml  requirements.in
cpb_s00/: settings.py  storage.py  urls.py  wsgi.py
cpb_s00_api/: views.py
cpb_s00_api/templates/: base.html  index.html
